kubernetes/apps/dashboard/dashboard/app/dashboard-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-homepage
  labels:
    app: dashboard-homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # io.kompose.network/dockerfile-default: "true"
        app: dashboard-homepage
    spec:
      containers:
        - image: ghcr.io/benphelps/homepage:v0.6.26
          name: dashboard-homepage
          resources:
            limits:
              cpu: 100m
              memory: 200M
          volumeMounts:
            - mountPath: /app/config/settings.yaml
              name: dashboard-homepage-settings
              subPath: settings.yaml
            - mountPath: /app/config/bookmarks.yaml
              name: dashboard-homepage-bookmarks
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: dashboard-homepage-docker
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: dashboard-homepage-kubernetes
              subPath: kubernetes.yaml
            - mountPath: /app/config/widgets.yaml
              name: dashboard-homepage-widgets
              subPath: widgets.yaml
            - mountPath: /app/config/services.yaml
              name: dashboard-homepage-services
              subPath: services.yaml
      restartPolicy: Always
      volumes:
        - name: dashboard-homepage-services
          configMap:
            name: dashboard-homepage-services
        - name: dashboard-homepage-bookmarks
          configMap:
            name: dashboard-homepage-bookmarks
        - name: dashboard-homepage-docker
          configMap:
            name: dashboard-homepage-docker
        - name: dashboard-homepage-kubernetes
          configMap:
            name: dashboard-homepage-kubernetes
        - name: dashboard-homepage-widgets
          configMap:
            name: dashboard-homepage-widgets
        - name: dashboard-homepage-settings
          configMap:
            name: dashboard-homepage-settings
status: {}
