kubernetes/apps/dashboard/dashboard/app/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-homepage
spec:
  selector:
    app: dashboard-homepage
  ports:
  - name: http
    targetPort: 3000
    port: 3000
